fixed-content-overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -109,8 +109,8 @@
 /* REC decor element styling */
 .header__decor-element {
   position: absolute;
-  top: 20px;
-  right: 20px;
+  top: 10px;
+  right: 10px;
   display: grid;
   grid-template-columns: repeat(2, auto);
   align-self: flex-start;
@@ -138,8 +138,8 @@
 .decorated-zone::before {
   content: "";
   position: absolute;
-  top: 20px;
-  right: 20px;
+  top: 10px;
+  right: 10px;
   inline-size: 25px;
   block-size: 25px;
   align-self: flex-start;
@@ -151,8 +151,8 @@
 .decorated-zone::after {
   content: "";
   position: absolute;
-  bottom: 20px;
-  left: 20px;
+  bottom: 10px;
+  left: 10px;
   inline-size: 25px;
   block-size: 25px;
   align-self: flex-end;
@@ -271,6 +271,21 @@
     grid-column: 2/3;
   }
 
+  .header__decor-element {
+    top: 20px;
+    right: 20px;
+  }
+
+  .decorated-zone::before {
+    top: 20px;
+    right: 20px;
+  }
+
+  .decorated-zone::after {
+    bottom: 20px;
+    left: 20px;
+  }
+
   .content {
     margin-block: 60px;
     padding-inline: 20px;
@@ -291,10 +306,11 @@
 
   .content-section__title {
     grid-column: 1/2;
-    grid-row: 1/4;
-    max-height: 23.4px;
+    grid-row: 1/3;
   }
-
+  .content-section__title_how {
+    grid-row: 1/7;
+  }
   .images__title {
     grid-column: 1/4;
     grid-row: 1/1;
